--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root{
+font-family: Arial, Helvetica, sans-serif;
 --text: #ffffff;
 --background: #000000;
 --primary: #d5d4e1;
 --secondary: #fffefe;
---accent: #c9c9c9;
-font-family: Arial, Helvetica, sans-serif;
+--accent: #ff0000;
 }
 
 body {
@@ -12,6 +12,15 @@ body {
     background: var(--background);
 }
 
-h1,
-h2,
-h3 {color: var(--secondary);}
+img {
+    padding: 2px;
+    border-radius: 50px;
+}
+
+audio {
+    background: var(--background);
+}
+
+li::marker {
+    color: var(--accent);
+}
