--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 :root{
-font-family: Arial, Helvetica, sans-serif;
 --text: #ffffff;
 --background: #000000;
 --primary: #d5d4e1;
@@ -7,9 +6,12 @@ font-family: Arial, Helvetica, sans-serif;
 --accent: #ff0000;
 }
 
+
+
 body {
     color: var(--text);
     background: var(--background);
+    font-family: "Zalando Sans Expanded";
 }
 
 img {
