Fixed typo when making link font bold.

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ details[open] summary {
 }
 
 #links {
-    font: weight 700;
+    font-weight:700;
     font-style: oblique;
     font-size: large;
 }
