Added underline to h2 (games), and underoverline to h1.

--- a/style.css
+++ b/style.css
@@ -48,3 +48,10 @@ details[open] summary {
     font-style: oblique;
     font-size: large;
 }
+
+.under {
+    text-decoration:underline white
+}
+.underover{
+    text-decoration:underline overline;
+}
