--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     color: var(--text);
     background: var(--background);
     font-family: "Zalando Sans Expanded";
-    padding-left: 5px;
+    padding-left: 5px 
 }
 
 
@@ -54,4 +54,15 @@ details[open] summary {
 }
 .underover{
     text-decoration:underline overline;
+}
+
+*{
+    /* border: 1px solid; */
+    /* border:1px dotted ; */
+    /* padding-left: 5px; */
+    padding-top: 1px
+    margin: 5px;
+    margin-right: 1px;
+    width: auto;
+    height: auto;
 }
