--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ li::marker {
 details summary {
     font-weight: bold
 }
+
 details[open] summary {
     color: var(--accent)
 }
@@ -60,8 +61,8 @@ details[open] summary {
     /* border: 1px solid; */
     /* border:1px dotted ; */
     /* padding-left: 5px; */
-    padding-top: 1px
-    margin: 5px;
+    /* padding-top: 1px */
+    margin: 10px;
     margin-right: 1px;
     width: auto;
     height: auto;
