--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@
 body {
     color: var(--text);
     background: var(--background);
-    font-family: "Zalando Sans Expanded";
+    font-family: "Zalando Sans Expanded", sans-serif;
     padding-left: 5px 
 }
 
