--- a/CSS/buttons.css
+++ b/CSS/buttons.css
@@ -11,7 +11,7 @@ button {
     padding: 9px 21px;
     font-size: 15px;
     color: white;
-    background: linear-gradient(135deg, var(--accent) 0%, var(--primary) 100%);
+    background: linear-gradient(135deg, var(--accent) 0%, #000000 100%);
     font-family: "Zalando Sans Expanded", sans-serif;
     font-weight: 900;
     border-radius: 12px;
@@ -22,8 +22,8 @@ button {
 }
 
 button:hover {
-    background-color: #ff1a1a;
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
+    background: linear-gradient(135deg, #ff1a1a 0%, #e0dbed 100%);
+    box-shadow: 0 6px 8px rgba(255, 0, 0, 0.6);
     transform: translateY(-2px);
     cursor: pointer;
 }
