--- a/CSS/style-hobbies-games.css
+++ b/CSS/style-hobbies-games.css
@@ -6,25 +6,36 @@
     --accent: #ff0000;
 }
 
-
-
 body {
     color: var(--text);
     background: var(--background);
     font-family: "Zalando Sans Expanded";
-    padding-left: 5px
+    padding-left: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-
-
-img {
-    padding: 2px;
-    border-radius: 50px;
+p {
+    font-size: 1.2rem; 
 }
 
-audio {
-    background: var(--background);
+h1 {
+    font-size: 2.7rem
 }
+
+h2 {
+    font-size: 2rem;
+    color: var(--text);
+}
+
+li {
+        font-size: 1.2rem;
+        margin: 0.5rem 0;
+    }
+
 
 li::marker {
     color: var(--accent);
