--- a/CSS/style-main.css
+++ b/CSS/style-main.css
@@ -88,6 +88,23 @@ input[type="text"] {
     color: var(--text);
 }
 
+#widgets {
+    text-align: center;
+}
+
+#widgets h2 {
+    text-align: center;
+    font-size: 2rem;
+    color: var(--text);
+}
+
+#widgets button {
+    display: inline-block;
+    width: auto;
+    min-width: 150px;
+    margin: 1rem auto;
+}
+
 #images {
     position: absolute;
     left: 2rem;
