Improved colors for secret

--- a/secret/css/secret2.css
+++ b/secret/css/secret2.css
@@ -32,13 +32,13 @@
     }
 
     50% {
-        color: red;
-        background-color: yellow;
+        color: black;
+        background-color: red;
     }
 
     75% {
         color: lime;
-        background-color: purple;
+        background-color: black;
     }
 
     100% {
