Added webpage linking to button

--- a/secret/css/secret2.css
+++ b/secret/css/secret2.css
@@ -13,6 +13,7 @@
     animation: flicker 0.1s steps(1) infinite, shake 0.15s infinite !important;
     transition: none !important;
     box-shadow: none !important;
+    font-family: "Rubik Glitch";
 }
 
 #secret-btn1:hover {
@@ -20,6 +21,45 @@
     transform: none !important;
     box-shadow: none !important;
 }
+
+h1 {
+    font-family: "Rubik Glitch";
+    text-align: center;
+    font-size: 3rem;
+}
+
+body {
+    margin: 0;
+    height: 100vh;
+    background-color: black;
+    color: red;
+    overflow: hidden;
+    font-family: "Rubik Glitch", system-ui;
+    text-align: center;
+}
+
+.static {
+    position: fixed;
+    inset: 0;
+    background: repeating-linear-gradient(black 0%, #050505 1px, black 2px);
+    animation: noise 0.2s infinite;
+    opacity: 0.1;
+    pointer-events: none;
+}
+
+.overlay {
+    position: relative;
+    top: 5%;
+    text-align: center;
+    color: #ff003c;
+    text-shadow:
+        0 0 10px #000000,
+        0 0 20px #ff0000,
+        0 0 40px #000000;
+}
+
+
+
 
 @keyframes flicker {
     0% {
@@ -38,7 +78,7 @@
     }
 
     75% {
-        color: lime;
+        color: red;
         background-color: black;
     }
 
