Fixed display error with h1 elements

--- a/secret/css/secret2.css
+++ b/secret/css/secret2.css
@@ -22,7 +22,7 @@
     box-shadow: none !important;
 }
 
-h1 {
+#aneg19 {
     font-family: "Rubik Glitch";
     text-align: center;
     font-size: 3rem;
